Inonsistent simplify behavior when linking collection with objects in sub-collection #79935

Closed
opened 2020-08-20 03:23:16 +02:00 by Richard Antalik · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.14736 Core Profile Context 20.7.2 27.20.2001.9003

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-19 22:05, hash: 50b435cbaa
Worked: (newest version of Blender that worked as expected)

Exact steps for others to reproduce the error
lib.blend

  • New General template
  • Delete all objects
  • Enable Render Properties > Simplify
  • Set Viewport > Max Subdivision to 0

Link link-this-col from lib.blend file

Both cubes will be viewed with 0 subdivisions.
If you repeat steps, but change Max Subdivision to 2, Both cubes will be viewed with 2 subdivisions.

Changing Max Subdivision property will affect only cube in link-this-col, but not in sub-collection.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.14736 Core Profile Context 20.7.2 27.20.2001.9003 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-19 22:05, hash: `50b435cbaa` Worked: (newest version of Blender that worked as expected) **Exact steps for others to reproduce the error** [lib.blend](https://archive.blender.org/developer/F8795319/lib.blend) - New General template - Delete all objects - Enable Render Properties > Simplify - Set Viewport > Max Subdivision to 0 # Link `link-this-col` from `lib.blend` file Both cubes will be viewed with 0 subdivisions. If you repeat steps, but change Max Subdivision to 2, Both cubes will be viewed with 2 subdivisions. Changing Max Subdivision property will affect only cube in `link-this-col`, but not in sub-collection.
Author
Member

Added subscriber: @iss

Added subscriber: @iss

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama

This issue was referenced by 22d8506ae5

This issue was referenced by 22d8506ae5796fb1d385fd44bba617e0f935270a

This issue was referenced by 0fae682d61

This issue was referenced by 0fae682d61e131d64c08ba3c16617c66cd4c28f0

This issue was referenced by 341ff17326

This issue was referenced by 341ff17326b6ec3f63c9c648c6e64e272f79a981

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2020-08-20 10:40:04 +02:00

That's a bug in RNA update function in fact... Fix incoming.

That's a bug in RNA update function in fact... Fix incoming.

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'

This issue was referenced by 59180ff153

This issue was referenced by 59180ff15373b4d21b4d1b677170f0fdf864b15d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79935
No description provided.